--- a/main/composer.json
+++ b/main/composer.json
@@ -9,9 +9,12 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "inertiajs/inertia-laravel": "^0.4.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
-        "nwidart/laravel-modules": "^8.2"
+        "nwidart/laravel-modules": "^8.2",
+        "tightenco/ziggy": "^1.1",
+        "wewowweb/laravel-svelte-preset": "^0.1.8"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
