--- a/package.json
+++ b/package.json
@@ -1,18 +1,50 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
-    },
-    "devDependencies": {
-        "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
+    "prod": "npm run production",
+    "production": "mix --production"
+  },
+  "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "axios": "^0.21",
+    "babel-loader": "^8.2.2",
+    "browser-sync": "^2.26.13",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "cross-env": "^7.0.3",
+    "cssnano": "^4.1.10",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-webp": "^6.0.0",
+    "imagemin-webpack-plugin": "^2.4.2",
+    "laravel-mix": "^6.0.6",
+    "laravel-mix-bundle-analyzer": "^1.0.5",
+    "laravel-mix-imagemin": "^1.0.3",
+    "laravel-mix-purgecss": "^6.0.0",
+    "laravel-mix-svelte": "^0.4.0",
+    "lodash": "^4.17.19",
+    "postcss": "^8.2.2",
+    "postcss-fixes": "^2.0.1",
+    "resolve-url-loader": "^3.1.2",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.0.0",
+    "svelte": "^3.31.1",
+    "svelte-loader": "^2.13.0",
+    "svelte-preprocess": "^4.6",
+    "vue-template-compiler": "^2.6.12"
+  },
+  "dependencies": {
+    "@inertiajs/inertia": "^0.8.7",
+    "@inertiajs/inertia-svelte": "^0.6.7",
+    "@inertiajs/progress": "^0.2.4",
+    "lodash": "^4.17.20",
+    "object-fit-images": "^3.2.4",
+    "svelte-teleport": "^0.1.1",
+    "sweetalert2": "^9.17.2"
+  }
 }
